added link rel=prefecth to a href

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <code>Animista</code>
                             </h4>
                         </p>
-                        <a href="https://jonrhymes.github.io/new-game/" class="btn btn-primary" target="_blank">Link to site</a>
+                        <link rel="prefetch"><a href="https://jonrhymes.github.io/new-game/" class="btn btn-primary" target="_blank">Link to site</a></link>
                     </div>
             </div>
 
@@ -111,7 +111,7 @@
                                 <code>Adobe Fonts</code>
                             </h4>
                         </p>
-                        <a href="https://jonrhymes-app.herokuapp.com/springs" class="btn btn-primary" target="_blank">Link to site</a>
+                        <link rel="prefetch"><a href="https://jonrhymes-app.herokuapp.com/springs" class="btn btn-primary" target="_blank">Link to site</a></link>
                     </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
                                 <code>Node.js</code>
                             </h4>
                         </p>
-                        <a href="https://shipperific.netlify.app" class="btn btn-primary" target="_blank">Link to site</a>
+                        <link rel="prefetch"><a href="https://shipperific.netlify.app" class="btn btn-primary" target="_blank">Link to site</a></link>
                     </div>
             </div>
 
@@ -147,7 +147,7 @@
                                 <code>PostgreSQL</code>
                             </h4>
                         </p>
-                        <a href="https://deblogsio.herokuapp.com/articles" class="btn btn-primary" target="_blank">Link to site</a>
+                        <link rel="prefetch"><a href="https://deblogsio.herokuapp.com/articles" class="btn btn-primary" target="_blank">Link to site</a></link>
                     </div>
             </div>
         </div>
