--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </button>
                 </div>
                 <div class="modal-body">
-                    <h3>Software Engineer & graduate of General Assembly</h3>
+                    <h3>Software Engineer & Graduate of General Assembly</h3>
                 </div>
                 <div class="modal-footer">
                     <h3 style="color:dodgerblue">jonrhymes@gmail.com</h3>
