Added fluidity to navbar, container, jumbotron at phone media query breakpoints

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-dark bg sticky-top">
         
-        <h1 class="display-1 text-center">{Portfolio}<strong><span class="author"> by: Jonathan Rhymes</span></strong></h1>
+        <h1 class="display-2 text-center">{Portfolio}<strong><span class="author"> by: Jonathan Rhymes</span></strong></h1>
     
     </nav>
 
@@ -63,7 +63,7 @@
             <p class="lead">As a Full-Stack Developer with an eye for design and small details, I create applications that inspire and excite users. My experience as a TV and film editor instilled in me a passion for artistic collaboration and seeing a project to fruition in the most engaging way.</p>
                 <!-- DOWNLOAD RESUME Button -->
                 <a href="assets/img/Jonathan_Rhymes_Resume-2020_1.pdf" download="Jonathan_Rhymes_Resume-2020_1">
-                    <button class="btn"><i class="fa fa-download"></i> Download Resume</button>
+                    <button class="btn" id="download-btn"><i class="fa fa-download"></i> Download Resume</button>
                 </a>
 
                 <!-- PHOTO MODAL: Button trigger modal -->
