added email address on jumbotron

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <button type="button" class="btn btn-primary" id="camera-icon" data-toggle="modal" data-target="#profilePic">
                     <i class="fa fa-camera" aria-hidden="true"></i>
                 </button>
+                <h3 class="email">jonrhymes@gmail.com</h3>
           </div>
 
 
