Added mailto link to email

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                 <button type="button" class="btn btn-primary" id="camera-icon" data-toggle="modal" data-target="#profilePic">
                     <i class="fa fa-camera" aria-hidden="true"></i>
                 </button>
+                <a href="mailto:jonrhymes@gmail.com">
                 <h3 class="email">jonrhymes@gmail.com</h3>
+                </a>
           </div>
 
 
@@ -76,7 +78,7 @@
                 <img class="card-img-top" id="duo-img" src="assets/img/Q-SPADES.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">DUO</h5>
-                        <p class="card-text">A comparative card game, like Blackjack or War, played against the computer and that features some of my favorite musicians!
+                        <p class="card-text">A comparative card game, like Blackjack or War, played against the computer and that features some of my favorite musicians!</p>
                             <h4>
                                 <code>HTML</code>, 
                                 <code>CSS</code>, 
@@ -96,7 +98,7 @@
                 <img class="card-img-top" id="springs.ly-img" src="assets/img/Wireframe_Desktop-Page2.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Springs.ly</h5>
-                        <p class="card-text">An app to keep track of which Florida springs you've yet to see and which ones you've already explored!
+                        <p class="card-text">An app to keep track of which Florida springs you've yet to see and which ones you've already explored!</p>
                             <h4>
                                 <code>HTML</code>, 
                                 <code>CSS</code>, 
@@ -115,12 +117,12 @@
             </div>
         </div>
 
-        <div class="card-deck">
+        <div class="card-deck" id="row-2">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="ship-img" src="assets/img/box-img.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Shipperific</h5>
-                        <p class="card-text">A way to track packages useing tracking number and carrier code that fetches an API.
+                        <p class="card-text">A way to track packages useing tracking number and carrier code that fetches an API.</p>
                             <h4>
                                 <code>HTML</code>, 
                                 <code>SASS</code>,
@@ -137,7 +139,7 @@
                 <img class="card-img-top" id="bill-img" src="assets/img/Bill.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Bill de Blogsio</h5>
-                        <p class="card-text">An outlet for the public to say something about Bill. Feel free to write a new blog post or leave a comment. 
+                        <p class="card-text">An outlet for the public to say something about Bill. Feel free to write a new blog post or leave a comment.</p>
                             <h4>
                                 <code>HTML</code>, 
                                 <code>SASS</code>,
@@ -148,6 +150,25 @@
                         </p>
                         <link rel="prefetch"><a href="https://deblogsio.herokuapp.com/articles" class="btn btn-primary" target="_blank">Link to site</a></link>
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
+                    </div>
+            </div>
+        </div>
+
+        <div class="card-deck">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" id="jeopardy-img" src="assets/img/jeopardy.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Jeopardy Trivia API</h5>
+                        <p class="card-text">A simple trivia game that fetches an API and serves up random questions. Plus, it features a point counter!</p>
+                            <h4>
+                                <code>HTML</code>, 
+                                <code>SCSS</code>,
+                                <code>JavaScript</code>,
+                                <code>React.js</code>,                     
+                                <code>API</code>
+                            </h4>
+                        </p>
+                        <link rel="prefetch"><a href="https://jeopardy-six.vercel.app" class="btn btn-primary" target="_blank">Link to site</a></link>
                     </div>
             </div>
         </div>
