added Bookmarkd website

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <code>Animista</code>
                             </h4>
                         </p>
-                        <link rel="prefetch"><a href="https://jonrhymes.github.io/new-game/" class="btn btn-primary" target="_blank">Link to site</a></link>
+                        <link rel="prefetch"><a href="https://jonrhymes.github.io/new-game/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
 
@@ -111,7 +111,7 @@
                                 <code>Adobe Fonts</code>
                             </h4>
                         </p>
-                        <link rel="prefetch"><a href="https://jonrhymes-app.herokuapp.com/springs" class="btn btn-primary" target="_blank">Link to site</a></link>
+                        <link rel="prefetch"><a href="https://jonrhymes-app.herokuapp.com/springs" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
@@ -125,13 +125,13 @@
                         <p class="card-text">A way to track packages useing tracking number and carrier code that fetches an API.</p>
                             <h4>
                                 <code>HTML</code>, 
-                                <code>SASS</code>,
+                                <code>SCSS</code>,
                                 <code>React Express</code>, 
                                 <code>Mongoose</code>,
                                 <code>Node.js</code>
                             </h4>
                         </p>
-                        <link rel="prefetch"><a href="https://shipperific.netlify.app" class="btn btn-primary" target="_blank">Link to site</a></link>
+                        <link rel="prefetch"><a href="https://shipperific.netlify.app" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
 
@@ -148,17 +148,17 @@
                                 <code>PostgreSQL</code>
                             </h4>
                         </p>
-                        <link rel="prefetch"><a href="https://deblogsio.herokuapp.com/articles" class="btn btn-primary" target="_blank">Link to site</a></link>
+                        <link rel="prefetch"><a href="https://deblogsio.herokuapp.com/articles" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
         </div>
 
-        <div class="card-deck">
+        <div class="card-deck" id="row-3">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="jeopardy-img" src="assets/img/jeopardy.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Jeopardy Trivia API</h5>
+                        <h5 class="card-title">Jeopardy Trivia</h5>
                         <p class="card-text">A simple trivia game that fetches an API and serves up random questions. Plus, it features a point counter!</p>
                             <h4>
                                 <code>HTML</code>, 
@@ -168,7 +168,26 @@
                                 <code>API</code>
                             </h4>
                         </p>
-                        <link rel="prefetch"><a href="https://jeopardy-six.vercel.app" class="btn btn-primary" target="_blank">Link to site</a></link>
+                        <link rel="prefetch"><a href="https://jeopardy-six.vercel.app" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
+                    </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" id="bookmarkd-img" src="assets/img/bookmarkd.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">/B/ookmark\'d</h5>
+                        <p class="card-text">A way to collect bookmarks from your favorite websites</p>
+                            <h4>
+                                <code>HTML</code>, 
+                                <code>SCSS</code>,
+                                <code>JavaScript</code>,
+                                <code>React.js</code>,
+                                <code>Express</code>                     
+                                <code>MongoDB</code>
+                            </h4>
+                        </p>
+                        <link rel="prefetch"><a href="https://jonrhymes.github.io/bookmarkd-frontend/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
+                        <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
         </div>
@@ -178,9 +197,9 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
                     <ul class="list-unstyled list-inline social text-center">
-                        <li class="list-inline-item"><a href="https://github.com/jonrhymes/" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/jonathan-rhymes/" target="_blank"><i class="fa fa-linkedin fa-4x" aria-hidden="true"></i></a></li>
-                        <li class="list-inline-item"><a href="https://medium.com/@jonrhymes" target="_blank">    <i class="fa fa-medium fa-4x" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/jonrhymes/" target="_blank" rel="noopener"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/jonathan-rhymes/" target="_blank" rel="noopener"><i class="fa fa-linkedin fa-4x" aria-hidden="true"></i></a></li>
+                        <li class="list-inline-item"><a href="https://medium.com/@jonrhymes" target="_blank" rel="noopener">    <i class="fa fa-medium fa-4x" aria-hidden="true"></i></a></li>
             </div>
     </section>
 
