--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <img class="card-img-top" id="ship-img" src="assets/img/box-img.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Shipperific</h5>
-                        <p class="card-text">A way to track packages useing tracking number and carrier code that fetches an API.</p>
+                        <p class="card-text">A way to track packages using tracking number and carrier code that fetches an API.</p>
                             <h4>
                                 <code>HTML</code>, 
                                 <code>SCSS</code>,
