--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                         <h5 class="card-title">DUO</h5>
                         <p class="card-text">A comparative card game, like Blackjack or War, played against the computer and that features some of my favorite musicians!</p>
                             <h4>
-                                <code>HTML</code>, 
-                                <code>CSS</code>, 
+                                <code>HTML5</code>, 
+                                <code>CSS3</code>, 
                                 <code>JavaScript</code>, 
-                                <code>JQuery</code>, 
+                                <code>jQuery</code>, 
                                 <code>Adobe Photoshop</code>, 
                                 <code>Google Fonts</code>, 
                                 <code>favicon</code>, 
@@ -100,8 +100,8 @@
                         <h5 class="card-title">Springs.ly</h5>
                         <p class="card-text">An app to keep track of which Florida springs you've yet to see and which ones you've already explored!</p>
                             <h4>
-                                <code>HTML</code>, 
-                                <code>CSS</code>, 
+                                <code>HTML5</code>, 
+                                <code>CSS3</code>, 
                                 <code>JavaScript</code>, 
                                 <code>React Express</code>, 
                                 <code>Node.js</code>,
@@ -124,7 +124,7 @@
                         <h5 class="card-title">Shipperific</h5>
                         <p class="card-text">A way to track packages using tracking number and carrier code that fetches an API.</p>
                             <h4>
-                                <code>HTML</code>, 
+                                <code>HTML5</code>, 
                                 <code>SCSS</code>,
                                 <code>React Express</code>, 
                                 <code>Mongoose</code>,
@@ -141,8 +141,8 @@
                         <h5 class="card-title">Bill de Blogsio</h5>
                         <p class="card-text">An outlet for the public to say something about Bill. Feel free to write a new blog post or leave a comment.</p>
                             <h4>
-                                <code>HTML</code>, 
-                                <code>SASS</code>,
+                                <code>HTML5</code>, 
+                                <code>SCSS</code>,
                                 <code>Ruby on Rails</code>, 
                                 <code>Bootstrap 4</code>,
                                 <code>PostgreSQL</code>
@@ -161,7 +161,7 @@
                         <h5 class="card-title">Jeopardy Trivia</h5>
                         <p class="card-text">A simple trivia game that fetches an API and serves up random questions. Plus, it features a point counter!</p>
                             <h4>
-                                <code>HTML</code>, 
+                                <code>HTML5</code>, 
                                 <code>SCSS</code>,
                                 <code>JavaScript</code>,
                                 <code>React.js</code>,                     
@@ -178,7 +178,7 @@
                         <h5 class="card-title">/B/ookmark\'d</h5>
                         <p class="card-text">A way to collect bookmarks from your favorite websites</p>
                             <h4>
-                                <code>HTML</code>, 
+                                <code>HTML5</code>, 
                                 <code>SCSS</code>,
                                 <code>JavaScript</code>,
                                 <code>React.js</code>,
