added button grid

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <div class="card-deck" id="row-2">
+        <div class="card-deck" id="top-row">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="ship-img" src="assets/img/box-img.png" alt="Card image cap">
                     <div class="card-body">
@@ -125,7 +125,7 @@
                         <p class="card-text">A way to track packages using tracking number and carrier code that fetches an API.</p>
                             <h4>
                                 <code>HTML5</code>, 
-                                <code>SCSS</code>,
+                                <code>Sass</code>,
                                 <code>React Express</code>, 
                                 <code>Mongoose</code>,
                                 <code>Node.js</code>
@@ -142,7 +142,7 @@
                         <p class="card-text">An outlet for the public to say something about Bill. Feel free to write a new blog post or leave a comment.</p>
                             <h4>
                                 <code>HTML5</code>, 
-                                <code>SCSS</code>,
+                                <code>Sass</code>,
                                 <code>Ruby on Rails</code>, 
                                 <code>Bootstrap 4</code>,
                                 <code>PostgreSQL</code>
@@ -154,7 +154,7 @@
             </div>
         </div>
 
-        <div class="card-deck" id="row-3">
+        <div class="card-deck" id="top-row">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="jeopardy-img" src="assets/img/jeopardy.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -162,7 +162,7 @@
                         <p class="card-text">A simple trivia game that fetches an API and serves up random questions. Plus, it features a point counter!</p>
                             <h4>
                                 <code>HTML5</code>, 
-                                <code>SCSS</code>,
+                                <code>Sass</code>,
                                 <code>JavaScript</code>,
                                 <code>React.js</code>,                     
                                 <code>API</code>
@@ -179,7 +179,7 @@
                         <p class="card-text">A way to collect bookmarks from your favorite websites</p>
                             <h4>
                                 <code>HTML5</code>, 
-                                <code>SCSS</code>,
+                                <code>Sass</code>,
                                 <code>JavaScript</code>,
                                 <code>React.js</code>,
                                 <code>Express</code>                     
@@ -191,6 +191,24 @@
                     </div>
             </div>
         </div>
+
+        </div class="card-deck" id="top-row">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" id="buttongrid" src="assets/img/buttongrid.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Button Grid</h5>
+                    <p class="card-text">HackerRank's Javascript challenge: Button Grid. The challenge asked us to create a 3x3 button grid and rotationally turn the outer buttons around the center button (#5) when it is is clicked</p>
+                        <h4>
+                            <code>HTML5</code>, 
+                            <code>CSS3</code>,
+                            <code>JavaScript</code>
+                        </h4>
+                    </p>
+                    <link rel="prefetch"><a href="https://jonrhymes.github.io/buttongrid/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
+                </div>
+        </div>
+
+        <div>
 
         <section id="footer">
 
