added button grid to cards

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
     </nav>    
 
 
-
+    <!----------- CONTAINER STARTS ---------->
     <div class="container">
 
+        <!----------- JUMBOTRON STARTS ---------->
         <div class="jumbotron">
             <h1 class="display-4">Hi, I'm a Software Engineer!</h1>
             <p class="lead">As a Full-Stack Developer with an eye for design and small details, I create applications that inspire and excite users. My experience as a TV and film editor instilled in me a passion for artistic collaboration and seeing a project to fruition in the most engaging way.</p>
@@ -70,10 +71,13 @@
                 <a href="mailto:jonrhymes@gmail.com">
                 <h3 class="email">jonrhymes@gmail.com</h3>
                 </a>
-          </div>
+        </div>
+        <!----------- JUMBOTRON ENDS ---------->
 
-
+        <!----------- ROW #1 STARTS ---------->
         <div class="card-deck" id="top-row">
+
+            <!----------- CARD #1 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="duo-img" src="assets/img/Q-SPADES.png" alt="Card image cap">
                     <div class="card-body">
@@ -93,7 +97,9 @@
                         <link rel="prefetch"><a href="https://jonrhymes.github.io/new-game/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
+            <!----------- CARD #1 ENDS ---------->
 
+            <!----------- CARD #2 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="springs.ly-img" src="assets/img/Wireframe_Desktop-Page2.png" alt="Card image cap">
                     <div class="card-body">
@@ -115,9 +121,14 @@
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
+            <!----------- CARD #2 ENDS ---------->
         </div>
+        <!----------- ROW #1 ENDS ---------->
 
+        <!----------- ROW #2 STARTS ---------->
         <div class="card-deck" id="top-row">
+
+            <!----------- CARD #3 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="ship-img" src="assets/img/box-img.png" alt="Card image cap">
                     <div class="card-body">
@@ -134,7 +145,9 @@
                         <link rel="prefetch"><a href="https://shipperific.netlify.app" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
+            <!----------- CARD #3 ENDS ---------->
 
+            <!----------- CARD #4 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="bill-img" src="assets/img/Bill.png" alt="Card image cap">
                     <div class="card-body">
@@ -152,9 +165,14 @@
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
+            <!----------- CARD #4 ENDS ---------->
         </div>
+        <!----------- ROW #2 ENDS ---------->
 
+        <!----------- ROW #3 STARTS ---------->
         <div class="card-deck" id="top-row">
+
+            <!----------- CARD #5 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="jeopardy-img" src="assets/img/jeopardy.jpg" alt="Card image cap">
                     <div class="card-body">
@@ -171,7 +189,9 @@
                         <link rel="prefetch"><a href="https://jeopardy-six.vercel.app" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
                     </div>
             </div>
+            <!----------- CARD #5 ENDS ---------->
 
+            <!----------- CARD #6 STARTS ---------->
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" id="bookmarkd-img" src="assets/img/bookmarkd.png" alt="Card image cap">
                     <div class="card-body">
@@ -190,28 +210,34 @@
                         <p class="heroku-warning">(Heroku takes 10-15 seconds to load)</p>
                     </div>
             </div>
+            <!----------- CARD #6 ENDS ---------->
         </div>
+        <!----------- ROW #3 ENDS ---------->
 
-        </div class="card-deck" id="top-row">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" id="buttongrid" src="assets/img/buttongrid.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Button Grid</h5>
-                    <p class="card-text">HackerRank's Javascript challenge: Button Grid. The challenge asked us to create a 3x3 button grid and rotationally turn the outer buttons around the center button (#5) when it is is clicked</p>
-                        <h4>
-                            <code>HTML5</code>, 
-                            <code>CSS3</code>,
-                            <code>JavaScript</code>
-                        </h4>
-                    </p>
-                    <link rel="prefetch"><a href="https://jonrhymes.github.io/buttongrid/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
-                </div>
+        <!----------- ROW #4 STARTS ---------->
+        <div class="card-deck" id="top-row">
+
+            <!----------- CARD #7 STARTS ---------->
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" id="buttongrid-img" src="assets/img/buttongrid.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Button Grid</h5>
+                        <p class="card-text">A HackerRank challenge: Make a 3x3 grid of buttons that rotate outside buttons when the center button is clicked.</p>
+                            <h4>
+                                <code>HTML5</code>, 
+                                <code>CSS</code>,
+                                <code>JavaScript</code>
+                            </h4>
+                        </p>
+                        <link rel="prefetch"><a href="https://jonrhymes.github.io/buttongrid/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
+                    </div>
+            </div>
+            <!----------- CARD #7 ENDS ---------->
         </div>
+        <!----------- ROW #4 ENDS ---------->
 
-        <div>
-
+        <!----------- FOOTER STARTS ---------->
         <section id="footer">
-
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
                     <ul class="list-unstyled list-inline social text-center">
@@ -219,11 +245,13 @@
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/jonathan-rhymes/" target="_blank" rel="noopener"><i class="fa fa-linkedin fa-4x" aria-hidden="true"></i></a></li>
                         <li class="list-inline-item"><a href="https://medium.com/@jonrhymes" target="_blank" rel="noopener">    <i class="fa fa-medium fa-4x" aria-hidden="true"></i></a></li>
             </div>
-    </section>
+        </section>
+        <!----------- FOOTER STARTS ---------->
 
     </div>
+    <!----------- CONTAINER ENDS ---------->
 
-    <!-- FONT AWESOME -->
+    <!----------- FONT AWESOME ----------->
     <script src="https://use.fontawesome.com/1e8835fd77.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous" defer></script>
 
