duo card image fixed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <!----------- CARD #1 STARTS ---------->
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" id="duo-img" src="assets/img/Q-SPADES.png" alt="Card image cap">
+                <img class="card-img-top" id="duo-img" src="assets/img/Q-SPADES.png" alt="Card image cap"/>
                     <div class="card-body">
                         <h5 class="card-title">DUO</h5>
                         <p class="card-text">A comparative card game, like Blackjack or War, played against the computer and that features some of my favorite musicians!</p>
