--- a/index.html
+++ b/index.html
@@ -233,6 +233,23 @@
                     </div>
             </div>
             <!----------- CARD #7 ENDS ---------->
+
+            <!----------- CARD #8 STARTS ---------->
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" id="buttongrid-img" src="assets/img/basic-calculator.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Basic Calculator</h5>
+                        <p class="card-text">A simple, monotone calculator that does basic arithmetic. Has functions that won't display undefined operations and ability to delete the last number input.</p>
+                            <h4>
+                                <code>HTML5</code>, 
+                                <code>CSS</code>,
+                                <code>JavaScript</code>
+                            </h4>
+                        </p>
+                        <link rel="prefetch"><a href="https://jonrhymes.github.io/basic_calculator/" class="btn btn-primary" target="_blank" rel="noopener">Link to site</a></link>
+                    </div>
+            </div>
+            <!----------- CARD #8 ENDS ---------->
         </div>
         <!----------- ROW #4 ENDS ---------->
 
